Fixed member count hover visibility on select

--- a/client/stylesheets/main.css
+++ b/client/stylesheets/main.css
@@ -19,6 +19,9 @@
 }
 
 /*USER PROFILE*/
+.userProfile{
+	height: 210px;
+}
 .media{
     /*box-shadow:0px 0px 4px -2px #000;*/
     margin: 20px 0;
